reports/Matplotlib_homework.log
Traceback (most recent call last):
  File "/opt/miniconda3/envs/jupyter-book/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/opt/miniconda3/envs/jupyter-book/lib/python3.7/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/miniconda3/envs/jupyter-book/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/miniconda3/envs/jupyter-book/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/opt/miniconda3/envs/jupyter-book/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/opt/miniconda3/envs/jupyter-book/lib/python3.7/site-packages/nbclient/client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/opt/miniconda3/envs/jupyter-book/lib/python3.7/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/miniconda3/envs/jupyter-book/lib/python3.7/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np
import matplotlib.animation as animation 
import matplotlib.pyplot as plt
 
fig, ax = plt.subplots(constrained_layout=True) 

x = np.arange(0, 2*np.pi, 0.01) 
y = np.cos(x) 
line, = ax.plot(x, y) 
dot, = ax.plot(x[0],y[0],marker='o',color='r') 

def init():  # only required for blitting to give a clean slate. 
    dot.set_data(np.nan,np.nan) 
    return dot, 
 
def animate(i): 
    # 你的代码
    return dot, 

ani = animation.FuncAnimation(# 你的代码 ) 

ani.save("my_fancy_animation.gif", dpi=80)                  
------------------

[0;36m  File [0;32m"<ipython-input-1-edc3d70e4c10>"[0;36m, line [0;32m22[0m
[0;31m    ani.save("my_fancy_animation.gif", dpi=80)[0m
[0m                                                                ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unexpected EOF while parsing

SyntaxError: unexpected EOF while parsing (<ipython-input-1-edc3d70e4c10>, line 22)

